feat: added auth transactions document

--- a/views/index.twig
+++ b/views/index.twig
@@ -3,4 +3,5 @@
 {% block content %}
 	{% include "pages/install.twig" %}
 	{% include "pages/blogMenu.twig" %}
+	{% include "pages/auth.twig" %}
 {% endblock %}
