--- a/views/pages/auth.twig
+++ b/views/pages/auth.twig
@@ -6,10 +6,10 @@
                     <p>The user performs the login, sign up and account delete operations with the following examples.</p>
                 </div>
                 <div class="overflow-hidden content-section">
-                    <h2>Get List</h2>
+                    <h2>Login</h2>
                     <pre><code>
 #Request Example
-GET {{ apiUrl }}login
+POST {{ apiUrl }}login
 {
     "UserEmail": cl@project.com
     "UserPassword": password
@@ -19,8 +19,8 @@ Result Example:
 [
     "result": {
         "UserID": 2,
-        "UserFirstName": "İsmet",
-        "UserLastName": "Kizgin",
+        "UserFirstName": "Lorem",
+        "UserLastName": "İpsum",
         "UserEmail": "cl@project.com",
         "UserDateOfBirth": "2020-10-15T00:00:00.000Z",
         "UserTypeName": "Root"
@@ -28,13 +28,13 @@ Result Example:
     "token":"SECRET-TOKEN"
 ]
         </code></pre>
-                    <p>For the list get, you need to make a GET call to the URL below :
+                    <p>For the user login, you need to make a POST call to the URL below :
                         <br>
                         <code class="higlighted">{{ apiUrl }}login</code>
                     </p>
                 </div>
                 <div class="overflow-hidden content-section">
-                    <h2>Add</h2>
+                    <h2>My Account Delete</h2>
                     <pre><code>
 #Request Example
 DELETE {{ apiUrl }}my-account
@@ -47,19 +47,19 @@ Reusult Example:
     "message": "Deletion succeeded."
 }
         </code></pre>
-                    <p>For the add transaction, you need to make a POST call to the URL below :
+                    <p>For the add transaction, you need to make a POST call to the URL below.User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}my-account</code>
                     </p>
                 </div>
                 <div class="overflow-hidden content-section">
-                    <h2>Update</h2>
+                    <h2>My Account Update</h2>
                     <pre><code>
 #Request Example
 PUT {{ apiUrl }}my-account
 {
-    "UserFirstName": "İsmet",
-    "UserLastName": "Kizginn",
+    "UserFirstName": "Lorem",
+    "UserLastName": "İpsumm",
     "UserEmail": "cl@project.com",
     "UserDateOfBirth": "2020-10-15T00:00:00.000Z",
 }
@@ -69,13 +69,13 @@ Reusult Example:
     "message": "User information has been updated."
 }
         </code></pre>
-                    <p>For the update transaction, you need to make a PUT call to the URL below :
+                    <p>For the update transaction, you need to make a PUT call to the URL below.User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}my-account</code>
                     </p>
                 </div>
                 <div class="overflow-hidden content-section">
-                    <h2>Delete</h2>
+                    <h2>Change Password</h2>
                     <pre><code>
 #Request Example
 PUT {{ apiUrl }}change-password
@@ -89,7 +89,7 @@ Reusult Example:
     "message": "The user password has been changed successfully."
 }
         </code></pre>
-                    <p>For the delete transaction, you need to make a DELETE call to the URL below :
+                    <p>For the delete transaction, you need to make a PUT call to the URL below :
                         <br>
                         <code class="higlighted">{{ apiUrl }}change-password</code>
                     </p>
@@ -112,7 +112,7 @@ Result Example:
 }
 
         </code></pre>
-        <p>For the token decode, you need to make a GET call to the URL below:
+        <p>For the token decode, you need to make a GET call to the URL below.User must login for this operation:
             <code class="higlighted">{{ apiUrl }}token-decode</code>
                 </div>
 
