feat: added user transactions document

--- a/views/components/menu.twig
+++ b/views/components/menu.twig
@@ -7,6 +7,7 @@
 	<div class="content-menu">
 		<ul class="tab">
 			{{ helper.menuLink("Installation", "tabInstallation", true) }}
+			{{ helper.menuLink("User Transactions", "tabUser") }}
 		</ul>
 	</div>
 </div>
