feat: added component menu transactions document

--- a/views/components/menu.twig
+++ b/views/components/menu.twig
@@ -8,6 +8,7 @@
 		<ul class="tab">
 			{{ helper.menuLink("Installation", "tabInstallation", true) }}
 			{{ helper.menuLink("User Transactions", "tabUser") }}
+			{{ helper.menuLink("Component Menu Transactions", "tabComponentMenu") }}
 		</ul>
 	</div>
 </div>
