--- a/views/index.twig
+++ b/views/index.twig
@@ -3,4 +3,5 @@
 {% block content %}
 	{% include "pages/install.twig" %}
 	{% include "pages/user.twig" %}
+	{% include "pages/componentMenu.twig" %}
 {% endblock %}
