refactor: fix for example values

--- a/views/pages/auth.twig
+++ b/views/pages/auth.twig
@@ -22,7 +22,7 @@ Result Example:
         "UserFirstName": "Lorem",
         "UserLastName": "İpsum",
         "UserEmail": "cl@project.com",
-        "UserDateOfBirth": "2020-10-15T00:00:00.000Z",
+        "UserDateOfBirth": "2020-10-15",
         "UserTypeName": "Root"
     },
     "token":"SECRET-TOKEN"
@@ -61,7 +61,7 @@ PUT {{ apiUrl }}my-account
     "UserFirstName": "Lorem",
     "UserLastName": "İpsumm",
     "UserEmail": "cl@project.com",
-    "UserDateOfBirth": "2020-10-15T00:00:00.000Z",
+    "UserDateOfBirth": "2020-10-15",
 }
         
 Reusult Example:
