refactor: component menu document revised

--- a/views/pages/user.twig
+++ b/views/pages/user.twig
@@ -11,11 +11,11 @@
 #Request Example
 POST {{ apiUrl }}user
 {
-    "UserFirstName" : cl,
-    "UserLastName" : project,
-    "UserEmail" : clproject@hotmail.com,
-    "UserDateOfBirth" : 2020-10-15T00:00:00.000Z,
-    "UserTypeName" : Editor,
+    "UserFirstName" : "cl",
+    "UserLastName" : "project",
+    "UserEmail" : "clproject@hotmail.com",
+    "UserDateOfBirth" : "2020-10-15",
+    "UserTypeName" : "Editor",
     "UserPassword" : clproje  
 }
                                 
@@ -39,7 +39,7 @@ PUT {{ apiUrl }}user
     "UserFirstName": "cl",
     "UserLastName": "project",
     "UserEmail": "clproject@hotmail.com",
-    "UserDateOfBirth": "2020-10-16T00:00:00.000Z",
+    "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Editor"          
 }
                                 
@@ -84,7 +84,7 @@ Result Example:
     "UserFirstName": "cl",
     "UserLastName": "project",
     "UserEmail": "clproject@hotmail.com",
-    "UserDateOfBirth": "2020-10-16T00:00:00.000Z",
+    "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Developer"
   },
   {
@@ -92,7 +92,7 @@ Result Example:
     "UserFirstName": "cl",
     "UserLastName": "project",
     "UserEmail": "clprojectd@hotmail.com",
-    "UserDateOfBirth": "2020-10-16T00:00:00.000Z",
+    "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Developer"
   },
   ...
@@ -120,7 +120,7 @@ Reusult Example:
     "UserFirstName": "cl",
     "UserLastName": "project",
     "UserEmail": "clproject@hotmail.com",
-    "UserDateOfBirth": "2020-10-16T00:00:00.000Z",
+    "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Developer"                                   
 }
         </code></pre>
@@ -137,7 +137,7 @@ Result Example:
     "UserFirstName": "cl",
     "UserLastName": "project",
     "UserEmail": "clproject@hotmail.com",
-    "UserDateOfBirth": "2020-10-16T00:00:00.000Z",
+    "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Developer"    
 },
   
@@ -148,6 +148,6 @@ Result Example:
      </p>
    </div>
 
- 
+   </div>
         
     </div>
