--- a/views/pages/componentMenu.twig
+++ b/views/pages/componentMenu.twig
@@ -1,54 +1,116 @@
-<div class="content-page tabcontent" id="tabComponentMenu">
+       <div class="content-page tabcontent" id="tabComponentMenu">
             <div class="content-code"></div>
             <div class="content">
                 <div class="overflow-hidden content-section">
-                    <h1>Component Menu Transacsions</h1>
-                    <p>The user performs the components add, update, delete, list and get information operations with the following examples.
-                    </p>
+                    <h1>Component Menu Transactions</h1>
+                    <p>The user performs the components add, update, delete, list and get information operations with the following examples.</p>
                 </div>
-
                 <div class="overflow-hidden content-section">
-                    <h2>COMPONENT MENU LİST</h2>
+                    <h2>Component Menu Add</h2>
                     <pre><code>
 #Request Example
-GET https://cl-serve.herokuapp.com/component-menu
+POST {{ apiUrl }}component-menu
+{
+    "ComponentMenuName": "cl",
+    "ComponentMenuDescription": "cl project"    
+}
+                    
+Reusult Example:
+{
+    "message": "Component menu registration completed."
+}
+        </code></pre>
+                    <p>For the add component menu transaction, you need to make a POST call to the URL below. :
+                        <br>
+                        <code class="higlighted">{{ apiUrl }}component-menu</code>
+                    </p>
+                </div>
+                <div class="overflow-hidden content-section">
+                    <h2>Component Menu UPDATE</h2>
+                    <pre><code>
+#Request Example
+PUT {{ apiUrl }}component-menu
+{
+    "ComponentMenuID": 21,
+    "ComponentMenuName": "cl",
+    "ComponentMenuDescription": "cl project"   
+}
                                 
+Reusult Example:
+{   
+    "message": "Component menu information has been updated."
+}
+        </code></pre>
+                    <p>For the update transaction, you need to make a PUT call to the URL below :
+                        <br>
+                        <code class="higlighted" >{{ apiUrl }}component-menu</code>
+                    </p>
+                </div>
+                <div class="overflow-hidden content-section">
+                    <h2>Component Menu DELETE</h2>
+                    <pre><code>
+#Request Example
+DELETE {{ apiUrl }}component-menu                        
+{
+    "ComponentMenuID": 21,    
+}
+                                                      
+Reusult Example:
+{
+    "message": "Deletion succeeded."
+}
+        </code></pre>
+                    <p>For the delete component menu transaction, you need to make a DELETE call to the URL below. :
+                        <br>
+                        <code class="higlighted">{{ apiUrl }}component-menu</code>
+                    </p>
+                </div>
+                <div class="overflow-hidden content-section">
+                    <h2>Component Menu LİST</h2>
+                    <pre><code>
+#Request Example
+GET {{ apiUrl }}component-menu 
+
 Result Example:
 [
- {
+  {
     "ComponentMenuID": 21,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"
- },
- {
+  },
+  {
     "ComponentMenuID": 4,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"
- },
- ...
-
+  },
+  ...
 ]
                                
         </code></pre>
                     <p>For the list get, you need to make a GET call to the URL below :
                         <br>
-                        <code class="higlighted" id="path">test</code>
+                        <code class="higlighted">{{ apiUrl }}component-menu</code>
                     </p>
                 </div>
-            
+
             <div class="overflow-hidden content-section">
+                <h2>Component Menu İnformation</h2>
         <pre><code>
 #Request Example
-GET http://cl-serve.herokuapp.com/component-menu/21    
-              
+GET {{ apiUrl }}component-menu/21               
+
 Result Example:
 {
     "ComponentMenuID": 21,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"
-}
-
-    </code></pre>
-    </div>   
-        
+} 
+      </code></pre>
+       <p>For the list get, you need to make a GET call to the URL below :
+       <br>
+        <code class="higlighted" >{{ apiUrl }}component-menu/21</code>
+     </p>
+   </div>
+</div>       
+    </div>
     </div>
