--- a/views/pages/user.twig
+++ b/views/pages/user.twig
@@ -97,16 +97,7 @@ Result Example:
   },
   ...
 ]
-                               
-        </code></pre>
-                    <p>For the list get, you need to make a GET call to the URL below. User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}user</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <pre><code>
-                        
+        
 #Request Example
 GET {{ apiUrl }}user
 {
@@ -124,12 +115,16 @@ Reusult Example:
     "UserTypeName": "Developer"                                   
 }
         </code></pre>
+        <p>For the list get, you need to make a GET call to the URL below :
+                        <br>
+                        <code class="higlighted">{{ apiUrl }}user</code>
+                    </p>
           </div>                          
-            
+           
             <div class="overflow-hidden content-section">
                 <h2>USER İNFORMATİON</h2>
         <pre><code>
- #Request Example
+#Request Example
 GET {{ apiUrl }}user/12                
 Result Example:
 {
