refactor: user and component menu document revised

--- a/views/pages/user.twig
+++ b/views/pages/user.twig
@@ -42,7 +42,7 @@ PUT {{ apiUrl }}user
                                 
 Reusult Example:
 User information has been updated.</code></pre>
-                    <p>For the update transaction, you need to make a PUT call to the URL below. User must login for this operation::
+                    <p>For the update user transaction, you need to make a PUT call to the URL below. User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}user</code>
                     </p>
@@ -58,7 +58,7 @@ DELETE {{ apiUrl }}user
                                                       
 Reusult Example:
 Deletion succeeded.</code></pre>
-                    <p>For the delete user transaction, you need to make a DELETE call to the URL below. User must login for this operation: :
+                    <p>For the delete user transaction, you need to make a DELETE call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}user</code>
                     </p>
@@ -106,7 +106,7 @@ Reusult Example:
     "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Developer"                                   
 }</code></pre>
-        <p>For the list get, you need to make a GET call to the URL below :
+        <p>For the user list get, you need to make a GET call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}user</code>
                     </p>
@@ -127,7 +127,7 @@ Result Example:
     "UserDateOfBirth": "2020-10-16",
     "UserTypeName": "Developer"    
 }</code></pre>
-       <p>For the list get, you need to make a GET call to the URL below. User must login for this operation:
+       <p>For the user list get, you need to make a GET call to the URL below. User must login for this operation:
        <br>
         <code class="higlighted">{{ apiUrl }}user/:UserID</code>
      </p>
