--- a/views/pages/componentMenu.twig
+++ b/views/pages/componentMenu.twig
@@ -16,8 +16,11 @@ POST {{ apiUrl }}component-menu
 }
                     
 Reusult Example:
-Component menu registration completed.</code></pre>
-                    <p>For the add component menu transaction, you need to make a POST call to the URL below. :
+{
+    "message": "Component menu registration completed."
+}
+        </code></pre>
+                    <p>For the add component menu transaction, you need to make a POST call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}component-menu</code>
                     </p>
@@ -34,8 +37,11 @@ PUT {{ apiUrl }}component-menu
 }
                                 
 Reusult Example:
-Component menu information has been updated.</code></pre>
-                    <p>For the update transaction, you need to make a PUT call to the URL below :
+{   
+    "message": "Component menu information has been updated."
+}
+        </code></pre>
+                    <p>For the update component menu transaction, you need to make a PUT call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted" >{{ apiUrl }}component-menu</code>
                     </p>
@@ -50,8 +56,11 @@ DELETE {{ apiUrl }}component-menu
 }
                                                       
 Reusult Example:
-Deletion succeeded.</code></pre>
-                    <p>For the delete component menu transaction, you need to make a DELETE call to the URL below. :
+{
+    "message": "Deletion succeeded."
+}
+        </code></pre>
+                    <p>For the delete component menu transaction, you need to make a DELETE call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}component-menu</code>
                     </p>
@@ -60,21 +69,20 @@ Deletion succeeded.</code></pre>
                     <h2>Component Menu LİST</h2>
                     <pre><code>
 #Request Example
-GET {{ apiUrl }}component-menu
-
+GET {{ apiUrl }}component-menu 
 Result Example:
 [
-    {
-        "ComponentMenuID": 21,
-        "ComponentMenuName": "cl",
-        "ComponentMenuDescription": "cl project"
-    },
-    {
-        "ComponentMenuID": 4,
-        "ComponentMenuName": "cl",
-        "ComponentMenuDescription": "cl project"
-    },
-    ...
+  {
+    "ComponentMenuID": 21,
+    "ComponentMenuName": "cl",
+    "ComponentMenuDescription": "cl project"
+  },
+  {
+    "ComponentMenuID": 4,
+    "ComponentMenuName": "cl",
+    "ComponentMenuDescription": "cl project"
+  },
+  ...
 ]
 
 #Request Example
@@ -89,8 +97,10 @@ Reusult Example:
     "ComponentMenuID": 21,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"                            
-}</code></pre>
-                    <p>For the list get, you need to make a GET call to the URL below :
+}
+                               
+        </code></pre>
+                    <p>For the component menu list get, you need to make a GET call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}component-menu</code>
                     </p>
@@ -100,17 +110,17 @@ Reusult Example:
                 <h2>Component Menu İnformation</h2>
         <pre><code>
 #Request Example
-GET {{ apiUrl }}component-menu/21
-
+GET {{ apiUrl }}component-menu/21               
 Result Example:
 {
     "ComponentMenuID": 21,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"
-}</code></pre>
-       <p>For the list get, you need to make a GET call to the URL below :
+} 
+      </code></pre>
+       <p>For the component menu list get, you need to make a GET call to the URL below. User must login for this operation :
        <br>
-        <code class="higlighted" >{{ apiUrl }}component-menu/:ComponentMenuID</code>
+        <code class="higlighted" >{{ apiUrl }}component-menu/21</code>
      </p>
    </div>
 </div>       
