--- a/views/pages/auth.twig
+++ b/views/pages/auth.twig
@@ -43,7 +43,7 @@ DELETE {{ apiUrl }}my-account
         
 Reusult Example:
 Deletion succeeded.</code></pre>
-                    <p>For the add transaction, you need to make a POST call to the URL below.User must login for this operation:
+                    <p>For the delete transaction, you need to make a DELETE call to the URL below. User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}my-account</code>
                     </p>
@@ -79,7 +79,7 @@ PUT {{ apiUrl }}change-password
         
 Reusult Example:
 The user password has been changed successfully.</code></pre>
-                    <p>For the delete transaction, you need to make a PUT call to the URL below :
+                    <p>For the change password transaction, you need to make a PUT call to the URL below :
                         <br>
                         <code class="higlighted">{{ apiUrl }}change-password</code>
                     </p>
