--- a/views/pages/blogMenu.twig
+++ b/views/pages/blogMenu.twig
@@ -18,7 +18,7 @@ POST {{ apiUrl }}blog-menu
         
 Result Example:
 Blog menu registration completed.</code></pre>
-                    <p>For the add blog menu, you need to make a POST call to the URL below. User must login for this operation.:
+                    <p>For the add blog menu, you need to make a POST call to the URL below. User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}blog-menu</code>
                     </p>
@@ -36,7 +36,7 @@ PUT {{ apiUrl }}blog-menu
         
 Reusult Example:
 Blog menu information has been updated.</code></pre>
-                    <p>For the update blog menu, you need to make a PUT call to the URL below :
+                    <p>For the update blog menu, you need to make a PUT call to the URL below.User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}blog-menu</code>
                     </p>
@@ -52,7 +52,7 @@ DELETE {{ apiUrl }}blog-menu
         
 Reusult Example:
 Deletion succeeded.</code></pre>
-             <p>For the list blog menu, you need to make a DELETE call to the URL below :
+             <p>For the delete blog menu, you need to make a DELETE call to the URL below.User must login for this operation: 
                 <br>
                         <code class="higlighted">{{ apiUrl }}blog-menu</code>
                     </p>
@@ -93,7 +93,7 @@ Result Example:
         "BlogMenuDescription": "Lorem ipsum dolor sit amet."
     }
 ]</code></pre>
-                    <p>For the list get blog menu, you need to make a GET call to the URL below :
+                    <p>For the list get blog menu, you need to make a GET call to the URL below.User must login for this operation:
                         <br>
                         <code class="higlighted" >{{ apiUrl }}blog-menu</code>
                     </p>
@@ -113,7 +113,7 @@ Result Example:
     "BlogMenuDescription": "Lorem ipsum dolor sit amet."
 }</code></pre>
                     <p>For the Blog Menu Information, you need to make a GET call to the URL below. 
-                        User must login for this operation.:
+                        User must login for this operation:
                         <br>
                         <code class="higlighted">{{ apiUrl }}blog-menu/:BlogMenuID</code></p>
                 </div>
