--- a/views/pages/componentMenu.twig
+++ b/views/pages/componentMenu.twig
@@ -1,4 +1,4 @@
-       <div class="content-page tabcontent" id="tabComponentMenu">
+<div class="content-page tabcontent" id="tabComponentMenu">
             <div class="content-code"></div>
             <div class="content">
                 <div class="overflow-hidden content-section">
@@ -16,10 +16,7 @@ POST {{ apiUrl }}component-menu
 }
                     
 Reusult Example:
-{
-    "message": "Component menu registration completed."
-}
-        </code></pre>
+Component menu registration completed.</code></pre>
                     <p>For the add component menu transaction, you need to make a POST call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}component-menu</code>
@@ -37,11 +34,8 @@ PUT {{ apiUrl }}component-menu
 }
                                 
 Reusult Example:
-{   
-    "message": "Component menu information has been updated."
-}
-        </code></pre>
-                    <p>For the update component menu transaction, you need to make a PUT call to the URL below. User must login for this operation :
+Component menu information has been updated.</code></pre>
+                    <p>For the update component menu transaction, you need to make a PUT call to the URL below. User must login for this operation : 
                         <br>
                         <code class="higlighted" >{{ apiUrl }}component-menu</code>
                     </p>
@@ -56,10 +50,7 @@ DELETE {{ apiUrl }}component-menu
 }
                                                       
 Reusult Example:
-{
-    "message": "Deletion succeeded."
-}
-        </code></pre>
+Deletion succeeded.</code></pre>
                     <p>For the delete component menu transaction, you need to make a DELETE call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}component-menu</code>
@@ -69,20 +60,20 @@ Reusult Example:
                     <h2>Component Menu LİST</h2>
                     <pre><code>
 #Request Example
-GET {{ apiUrl }}component-menu 
+GET {{ apiUrl }}component-menu
 Result Example:
 [
-  {
-    "ComponentMenuID": 21,
-    "ComponentMenuName": "cl",
-    "ComponentMenuDescription": "cl project"
-  },
-  {
-    "ComponentMenuID": 4,
-    "ComponentMenuName": "cl",
-    "ComponentMenuDescription": "cl project"
-  },
-  ...
+    {
+        "ComponentMenuID": 21,
+        "ComponentMenuName": "cl",
+        "ComponentMenuDescription": "cl project"
+    },
+    {
+        "ComponentMenuID": 4,
+        "ComponentMenuName": "cl",
+        "ComponentMenuDescription": "cl project"
+    },
+    ...
 ]
 
 #Request Example
@@ -97,9 +88,7 @@ Reusult Example:
     "ComponentMenuID": 21,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"                            
-}
-                               
-        </code></pre>
+}</code></pre>
                     <p>For the component menu list get, you need to make a GET call to the URL below. User must login for this operation :
                         <br>
                         <code class="higlighted">{{ apiUrl }}component-menu</code>
@@ -110,19 +99,21 @@ Reusult Example:
                 <h2>Component Menu İnformation</h2>
         <pre><code>
 #Request Example
-GET {{ apiUrl }}component-menu/21               
+GET {{ apiUrl }}component-menu/21
 Result Example:
 {
     "ComponentMenuID": 21,
     "ComponentMenuName": "cl",
     "ComponentMenuDescription": "cl project"
-} 
-      </code></pre>
-       <p>For the component menu list get, you need to make a GET call to the URL below. User must login for this operation :
+}</code></pre>
+       <p>For the component menu list get, you need to make a GET call to the URL below. User must login for this operation : 
        <br>
-        <code class="higlighted" >{{ apiUrl }}component-menu/21</code>
+        <code class="higlighted" >{{ apiUrl }}component-menu/:ComponentMenuID</code>
      </p>
    </div>
 </div>       
     </div>
     </div>
+
+
+
