--- a/views/index.twig
+++ b/views/index.twig
@@ -6,4 +6,5 @@
 	{% include "pages/user.twig" %}
 	{% include "pages/componentMenu.twig" %}
 	{% include "pages/blogMenu.twig" %}
+	{% include "pages/errorMessages.twig" %}
 {% endblock %}
