--- a/views/pages/componentMenu.twig
+++ b/views/pages/componentMenu.twig
@@ -1,13 +1,13 @@
-       <div class="content-page tabcontent" id="tabComponentMenu">
-            <div class="content-code"></div>
-            <div class="content">
-                <div class="overflow-hidden content-section">
-                    <h1>Component Menu Transactions</h1>
-                    <p>The user performs the components add, update, delete, list and get information operations with the following examples.</p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Component Menu Add</h2>
-                    <pre><code>
+<div class="content-page tabcontent" id="tabComponentMenu">
+	<div class="content-code"></div>
+	<div class="content">
+		<div class="overflow-hidden content-section">
+			<h1>Component Menu Transactions</h1>
+			<p>The user performs the components add, update, delete, list and get information operations with the following examples.</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Component Menu Add</h2>
+			<pre><code>
 #Request Example
 POST {{ apiUrl }}component-menu
 {
@@ -20,14 +20,14 @@ Reusult Example:
     "message": "Component menu registration completed."
 }
         </code></pre>
-                    <p>For the add component menu transaction, you need to make a POST call to the URL below. :
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}component-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Component Menu UPDATE</h2>
-                    <pre><code>
+			<p>For the add component menu transaction, you need to make a POST call to the URL below. :
+				<br>
+				<code class="higlighted">{{ apiUrl }}component-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Component Menu UPDATE</h2>
+			<pre><code>
 #Request Example
 PUT {{ apiUrl }}component-menu
 {
@@ -41,14 +41,14 @@ Reusult Example:
     "message": "Component menu information has been updated."
 }
         </code></pre>
-                    <p>For the update transaction, you need to make a PUT call to the URL below :
-                        <br>
-                        <code class="higlighted" >{{ apiUrl }}component-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Component Menu DELETE</h2>
-                    <pre><code>
+			<p>For the update transaction, you need to make a PUT call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}component-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Component Menu DELETE</h2>
+			<pre><code>
 #Request Example
 DELETE {{ apiUrl }}component-menu                        
 {
@@ -60,14 +60,14 @@ Reusult Example:
     "message": "Deletion succeeded."
 }
         </code></pre>
-                    <p>For the delete component menu transaction, you need to make a DELETE call to the URL below. :
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}component-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Component Menu LİST</h2>
-                    <pre><code>
+			<p>For the delete component menu transaction, you need to make a DELETE call to the URL below. :
+				<br>
+				<code class="higlighted">{{ apiUrl }}component-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Component Menu LİST</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}component-menu 
 Result Example:
@@ -100,15 +100,15 @@ Reusult Example:
 }
                                
         </code></pre>
-                    <p>For the list get, you need to make a GET call to the URL below :
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}component-menu</code>
-                    </p>
-                </div>
+			<p>For the list get, you need to make a GET call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}component-menu</code>
+			</p>
+		</div>
 
-            <div class="overflow-hidden content-section">
-                <h2>Component Menu İnformation</h2>
-        <pre><code>
+		<div class="overflow-hidden content-section">
+			<h2>Component Menu İnformation</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}component-menu/21               
 Result Example:
@@ -118,11 +118,10 @@ Result Example:
     "ComponentMenuDescription": "cl project"
 } 
       </code></pre>
-       <p>For the list get, you need to make a GET call to the URL below :
-       <br>
-        <code class="higlighted" >{{ apiUrl }}component-menu/21</code>
-     </p>
-   </div>
-</div>       
-    </div>
-    </div>
+			<p>For the list get, you need to make a GET call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}component-menu/21</code>
+			</p>
+		</div>
+	</div>
+</div></div>
