--- a/views/pages/auth.twig
+++ b/views/pages/auth.twig
@@ -1,13 +1,13 @@
 <div class="content-page tabcontent" id="tabAuth">
-            <div class="content-code"></div>
-            <div class="content">
-                <div class="overflow-hidden content-section">
-                    <h1>Auth Transacsions</h1>
-                    <p>The user performs the login, sign up and account delete operations with the following examples.</p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Login</h2>
-                    <pre><code>
+	<div class="content-code"></div>
+	<div class="content">
+		<div class="overflow-hidden content-section">
+			<h1>Auth Transacsions</h1>
+			<p>The user performs the login, sign up and account delete operations with the following examples.</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Login</h2>
+			<pre><code>
 #Request Example
 POST {{ apiUrl }}login
 {
@@ -28,14 +28,14 @@ Result Example:
     "token":"SECRET-TOKEN"
 ]
         </code></pre>
-                    <p>For the user login, you need to make a POST call to the URL below :
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}login</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>My Account Delete</h2>
-                    <pre><code>
+			<p>For the user login, you need to make a POST call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}login</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>My Account Delete</h2>
+			<pre><code>
 #Request Example
 DELETE {{ apiUrl }}my-account
 {
@@ -47,14 +47,14 @@ Reusult Example:
     "message": "Deletion succeeded."
 }
         </code></pre>
-                    <p>For the add transaction, you need to make a POST call to the URL below.User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}my-account</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>My Account Update</h2>
-                    <pre><code>
+			<p>For the add transaction, you need to make a POST call to the URL below.User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}my-account</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>My Account Update</h2>
+			<pre><code>
 #Request Example
 PUT {{ apiUrl }}my-account
 {
@@ -69,14 +69,14 @@ Reusult Example:
     "message": "User information has been updated."
 }
         </code></pre>
-                    <p>For the update transaction, you need to make a PUT call to the URL below.User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}my-account</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Change Password</h2>
-                    <pre><code>
+			<p>For the update transaction, you need to make a PUT call to the URL below.User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}my-account</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Change Password</h2>
+			<pre><code>
 #Request Example
 PUT {{ apiUrl }}change-password
 {
@@ -89,17 +89,15 @@ Reusult Example:
     "message": "The user password has been changed successfully."
 }
         </code></pre>
-                    <p>For the delete transaction, you need to make a PUT call to the URL below :
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}change-password</code>
-                    </p>
-                </div>
-<div>
-
-</div>
-                <div class="overflow-hidden content-section" >
-                    <h2>Token Decode</h2>
-                    <pre><code>
+			<p>For the delete transaction, you need to make a PUT call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}change-password</code>
+			</p>
+		</div>
+		<div></div>
+		<div class="overflow-hidden content-section">
+			<h2>Token Decode</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}token-decode
 
@@ -112,11 +110,12 @@ Result Example:
 }
 
         </code></pre>
-        <p>For the token decode, you need to make a GET call to the URL below.User must login for this operation:
-            <code class="higlighted">{{ apiUrl }}token-decode</code>
-                </div>
+			<p>For the token decode, you need to make a GET call to the URL below.User must login for this operation:
+				<code class="higlighted">{{ apiUrl }}token-decode</code>
+			</p>
+		</div>
 
 
-            </div>
+	</div>
 
-        </div>
+</div>
