--- a/views/pages/blogMenu.twig
+++ b/views/pages/blogMenu.twig
@@ -1,14 +1,15 @@
 <div class="content-page tabcontent" id="tabBlogMenu">
-            <div class="content-code"></div>
-            <div class="content">
-                <div class="overflow-hidden content-section">
-                    <h1>Blog Menu Transactions</h1>
-                   <p> The user performs the blog menu add, update, delete, list and get information operations
-                        with the following examples.</p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu Add</h2>
-                    <pre><code>
+	<div class="content-code"></div>
+	<div class="content">
+		<div class="overflow-hidden content-section">
+			<h1>Blog Menu Transactions</h1>
+			<p>
+				The user performs the blog menu add, update, delete, list and get information operations
+				                        with the following examples.</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu Add</h2>
+			<pre><code>
 #Request Example
 POST {{ apiUrl }}blog-menu
 {
@@ -21,14 +22,14 @@ Result Example:
     "message" : "Blog menu registration completed."
 }
         </code></pre>
-                    <p>For the add blog menu, you need to make a POST call to the URL below. User must login for this operation.:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu Update</h2>
-                    <pre><code>
+			<p>For the add blog menu, you need to make a POST call to the URL below. User must login for this operation.:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu Update</h2>
+			<pre><code>
 #Request Example
 PUT {{ apiUrl }}blog-menu
 {
@@ -42,14 +43,14 @@ Reusult Example:
     "message": "Blog menu information has been updated."
 }
         </code></pre>
-                    <p>For the update blog menu, you need to make a PUT call to the URL below :
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu Delete</h2>
-                    <pre><code>
+			<p>For the update blog menu, you need to make a PUT call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu Delete</h2>
+			<pre><code>
 #Request Example
 DELETE {{ apiUrl }}blog-menu
 {
@@ -61,14 +62,14 @@ Reusult Example:
     "message": "Deletion succeeded."
 }
         </code></pre>
-             <p>For the list blog menu, you need to make a DELETE call to the URL below :
-                <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu List</h2>
-                    <pre><code>
+			<p>For the list blog menu, you need to make a DELETE call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu List</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}blog-menu
 
@@ -103,16 +104,15 @@ Result Example:
     }
 ]
         </code></pre>
-                    <p>For the list get blog menu, you need to make a GET call to the URL below :
-                        <br>
-                        <code class="higlighted" >{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-<div>
-</div>
-                <div class="overflow-hidden content-section" >
-                    <h2>Blog Menu information</h2>
-                    <pre><code>
+			<p>For the list get blog menu, you need to make a GET call to the URL below :
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div></div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu information</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}blog-menu/2
 
@@ -126,10 +126,11 @@ Result Example:
     
 
         </code></pre>
-                    <p>For the Blog Menu Information, you need to make a GET call to the URL below. 
-                        User must login for this operation.:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu/2</code></p>
-                </div>
-            </div>
-        </div>
+			<p>For the Blog Menu Information, you need to make a GET call to the URL below. 
+				                        User must login for this operation.:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu/2</code>
+			</p>
+		</div>
+	</div>
+</div>
