refactor: all documents revised

--- a/views/components/menu.twig
+++ b/views/components/menu.twig
@@ -9,11 +9,12 @@
 			{{ helper.menuLink("Installation", "tabInstallation", true) }}
 			{{ helper.menuLink("Auth Transactions", "tabAuth") }}
 			{{ helper.menuLink("User Transactions", "tabUser") }}
+			{{ helper.menuLink("Component Transactions", "tabComponent") }}
 			{{ helper.menuLink("Component Menu Transactions", "tabComponentMenu") }}
+			{{ helper.menuLink("Blog Transactions", "tabBlogRouters") }}
 			{{ helper.menuLink("Blog Menu Transactions", "tabBlogMenu") }}
 			{{ helper.menuLink("Definition of Error Message", "tabErrorMessages") }}
 			{{ helper.menuLink("Definition Roles", "tabRoles") }}
-			{{ helper.menuLink("Blog Routers", "tabBlogRouters") }}
 		</ul>
 	</div>
 </div>
