--- a/views/index.twig
+++ b/views/index.twig
@@ -9,4 +9,5 @@
 	{% include "pages/errorMessages.twig" %}
 	{% include "pages/roles.twig" %}
 	{% include "pages/blogRouters.twig" %}
+	{% include "pages/component.twig" %}
 {% endblock %}
