--- a/views/pages/errorMessages.twig
+++ b/views/pages/errorMessages.twig
@@ -1,6 +1,6 @@
 <div class="content-page tabcontent" id="tabErrorMessages">
 	<div class="content full-content">
-		<div class="overflow-hidden content-section">
+		<div class="content-section">
 			<h1>Definition of Error Messages</h1>
 			<p>An error message is a message displayed to the user by an operating system or application when an unexpected condition happens. In most cases, error messages are displayed with the help of dialog boxes by the operating system or application.
 			</p>
