--- a/views/pages/install.twig
+++ b/views/pages/install.twig
@@ -1,7 +1,7 @@
 <div class="content-page tabcontent" id="tabInstallation" style="display: block;">
 	<div class="content-code"></div>
 	<div class="content">
-		<div class="overflow-hidden content-section">
+		<div class="content-section">
 			<h1>Get started</h1>
 			<pre>API Domain
 {{ apiUrl }}</pre>
