--- a/views/pages/user.twig
+++ b/views/pages/user.twig
@@ -1,7 +1,7 @@
 <div class="content-page tabcontent" id="tabUser">
 	<div class="content-code"></div>
 	<div class="content">
-		<div class="overflow-hidden content-section">
+		<div class="ontent-section">
 			<h1>User Transactions</h1>
 			<p>The user performs the user add, update, delete, list and get information operations with the following examples.</p>
 		</div>
@@ -90,25 +90,30 @@ Result Example:
 ]
         
 #Request Example
-GET {{ apiUrl }}user
-{
-    "limit": 1,
-    "offset": 0                        
-}
+GET {{ apiUrl }}user?limit=1&offset=0
                         
 Reusult Example:    
-{
-    "UserID": 11,
-    "UserFirstName": "cl",
-    "UserLastName": "project",
-    "UserEmail": "clproject@hotmail.com",
-    "UserDateOfBirth": "2020-10-16",
-    "UserTypeName": "Developer"                                   
-}</code></pre>
+[
+    {
+        "UserID": 11,
+        "UserFirstName": "cl",
+        "UserLastName": "project",
+        "UserEmail": "clproject@hotmail.com",
+        "UserDateOfBirth": "2020-10-16",
+        "UserTypeName": "Developer"
+    }
+]</code></pre>
 			<p>For the user list get, you need to make a GET call to the URL below. User must login for this operation :
 				<br>
 				<code class="higlighted">{{ apiUrl }}user</code>
 			</p>
+			<p>Query Parameters</p>
+			<p>&emsp;1-
+				<b>limit:</b>
+				The limit parameter specifies the desired amount of data.<br>
+				&emsp;2-
+				<b>offset:</b>
+				It indicates from which line the requested data should be taken from.</p>
 		</div>
 
 		<div class="overflow-hidden content-section">
