--- a/views/pages/auth.twig
+++ b/views/pages/auth.twig
@@ -1,7 +1,7 @@
 <div class="content-page tabcontent" id="tabAuth">
 	<div class="content-code"></div>
 	<div class="content">
-		<div class="overflow-hidden content-section">
+		<div class="content-section">
 			<h1>Auth Transacsions</h1>
 			<p>The user performs the login, sign up and account delete operations with the following examples.</p>
 		</div>
@@ -43,7 +43,8 @@ DELETE {{ apiUrl }}my-account
         
 Reusult Example:
 Deletion succeeded.</code></pre>
-			<p>For the delete transaction, you need to make a DELETE call to the URL below. User must login for this operation:
+			<p>For the delete transaction, you need to make a DELETE call to the URL below. User must login for this
+				operation:
 				<br>
 				<code class="higlighted">{{ apiUrl }}my-account</code>
 			</p>
@@ -62,7 +63,8 @@ PUT {{ apiUrl }}my-account
         
 Reusult Example:
 User information has been updated.</code></pre>
-			<p>For the update transaction, you need to make a PUT call to the URL below.User must login for this operation:
+			<p>For the update transaction, you need to make a PUT call to the URL below.User must login for this
+				operation:
 				<br>
 				<code class="higlighted">{{ apiUrl }}my-account</code>
 			</p>
@@ -84,7 +86,21 @@ The user password has been changed successfully.</code></pre>
 				<code class="higlighted">{{ apiUrl }}change-password</code>
 			</p>
 		</div>
-		<div></div>
+		<div class="overflow-hidden content-section">
+			<h2>Password Control</h2>
+<pre><code>
+#Request Example
+POST {{ apiUrl }}password-control
+{
+    "UserPassword": password,
+}
+	
+Result Example:
+Your password is correct</code></pre>
+			<p>For the password control, you need to make a POST call to the URL below.User must login for this operation:
+				<code class="higlighted">{{ apiUrl }}password-control</code>
+			</p>
+		</div>
 		<div class="overflow-hidden content-section">
 			<h2>Token Decode</h2>
 			<pre><code>
@@ -102,8 +118,5 @@ Result Example:
 				<code class="higlighted">{{ apiUrl }}token-decode</code>
 			</p>
 		</div>
-
-
 	</div>
-
 </div>
