--- a/views/pages/blogMenu.twig
+++ b/views/pages/blogMenu.twig
@@ -1,11 +1,11 @@
 <div class="content-page tabcontent" id="tabBlogMenu">
 	<div class="content-code"></div>
 	<div class="content">
-		<div class="overflow-hidden content-section">
+		<div class="content-section">
 			<h1>Blog Menu Transactions</h1>
 			<p>
 				The user performs the blog menu add, update, delete, list and get information operations
-				                        with the following examples.</p>
+								                        with the following examples.</p>
 		</div>
 		<div class="overflow-hidden content-section">
 			<h2>Blog Menu Add</h2>
@@ -19,14 +19,14 @@ POST {{ apiUrl }}blog-menu
         
 Result Example:
 Blog menu registration completed.</code></pre>
-                    <p>For the add blog menu, you need to make a POST call to the URL below. User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu Update</h2>
-                    <pre><code>
+			<p>For the add blog menu, you need to make a POST call to the URL below. User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu Update</h2>
+			<pre><code>
 #Request Example
 PUT {{ apiUrl }}blog-menu
 {
@@ -37,14 +37,14 @@ PUT {{ apiUrl }}blog-menu
         
 Reusult Example:
 Blog menu information has been updated.</code></pre>
-                    <p>For the update blog menu, you need to make a PUT call to the URL below.User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu Delete</h2>
-                    <pre><code>
+			<p>For the update blog menu, you need to make a PUT call to the URL below.User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu Delete</h2>
+			<pre><code>
 #Request Example
 DELETE {{ apiUrl }}blog-menu
 {
@@ -53,14 +53,14 @@ DELETE {{ apiUrl }}blog-menu
         
 Reusult Example:
 Deletion succeeded.</code></pre>
-             <p>For the delete blog menu, you need to make a DELETE call to the URL below.User must login for this operation: 
-                <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Menu List</h2>
-                    <pre><code>
+			<p>For the delete blog menu, you need to make a DELETE call to the URL below.User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+		</div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu List</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}blog-menu
 
@@ -80,11 +80,7 @@ Result Example:
 ]       
 
 #Request Example
-GET https://cl-serve.herokuapp.com/blog-menu
-{
-    "limit": 1,
-    "offset": 0
-}
+GET {{ apiUrl }}blog-menu?limit=1&offset=0
 
 Result Example:
 [
@@ -94,16 +90,21 @@ Result Example:
         "BlogMenuDescription": "Lorem ipsum dolor sit amet."
     }
 ]</code></pre>
-                    <p>For the list get blog menu, you need to make a GET call to the URL below.User must login for this operation:
-                        <br>
-                        <code class="higlighted" >{{ apiUrl }}blog-menu</code>
-                    </p>
-                </div>
-<div>
-</div>
-                <div class="overflow-hidden content-section" >
-                    <h2>Blog Menu information</h2>
-                    <pre><code>
+			<p>For the list get blog menu, you need to make a GET call to the URL below.User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu</code>
+			</p>
+			<p>&emsp;1-
+				<b>limit:</b>
+				The limit parameter specifies the desired amount of data.<br>
+				&emsp;2-
+				<b>offset:</b>
+				It indicates from which line the requested data should be taken from.</p>
+		</div>
+		<div></div>
+		<div class="overflow-hidden content-section">
+			<h2>Blog Menu information</h2>
+			<pre><code>
 #Request Example
 GET {{ apiUrl }}blog-menu/2
 
@@ -113,10 +114,11 @@ Result Example:
     "BlogMenuName": "Lorem ipsum2",
     "BlogMenuDescription": "Lorem ipsum dolor sit amet."
 }</code></pre>
-                    <p>For the Blog Menu Information, you need to make a GET call to the URL below. 
-                        User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog-menu/:BlogMenuID</code></p>
-                </div>
-            </div>
-        </div>
+			<p>For the Blog Menu Information, you need to make a GET call to the URL below. 
+				                        User must login for this operation:
+				<br>
+				<code class="higlighted">{{ apiUrl }}blog-menu/:BlogMenuID</code>
+			</p>
+		</div>
+	</div>
+</div>
