--- a/views/pages/blogRouters.twig
+++ b/views/pages/blogRouters.twig
@@ -1,83 +1,58 @@
 <div class="content-page tabcontent" id="tabBlogRouters">
-	<div class="content-code"></div>
-	<div class="content">
-		<div class="overflow-hidden content-section">
-			<h1>Blog Routers</h1>
-			<p>
-				The user performs the blog add, update, delete, list and get information operations
-				                        with the following examples.</p>
-		</div>
-		<div class="overflow-hidden content-section">
-			<h2>Login</h2>
-			<pre><code>
-#Request Example
-POST {{ apiUrl }}login
-{
-    "UserEmail": "cl@project.com"
-    "UserPassword": "password"
-}
-        
-Result Example:
-[
-    "result": {
-        "UserID": 1,
-        "UserFirstName": "Lorem",
-        "UserLastName": "İpsum",
-        "UserEmail": "cl@project.com",
-        "UserDateOfBirth": "2020-10-15",
-        "UserTypeName": "Root"
-    },
-    "token":"SECRET-TOKEN"
-]</code></pre>
-                    <p>For the add blog, you need to make a POST call to the URL below:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}login</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog registration</h2>
-                    <pre><code>
+    <div class="content-code"></div>
+    <div class="content">
+        <div class="content-section">
+            <h1>Blog Transactions</h1>
+            <p>
+                The user performs the blog add, update, delete, list and get information operations
+                with the following examples.</p>
+        </div>
+        <div class="overflow-hidden content-section">
+            <h2>Blog Add</h2>
+            <pre><code>
 #Request Example
 POST {{ apiUrl }}blog
 {
     "BlogMenuID" : 1,
     "BlogContent" : "Lorem İpsumm",
     "BlogDescription" : "Lorem ipsum dolor sit amet.",
-    "BlogTitle": "Lorem İpsum"
+    "BlogTitle": "Lorem İpsum",
+    "BlogState": false
 }
         
 Reusult Example:
-"Blog registration completed."</code></pre>
-                    <p>For the add blog, you need to make a POST call to the URL below:.User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog</code>
-                    </p>
-                </div>
-<div class="overflow-hidden content-section">
-                    <h2>Blog Update</h2>
-                    <pre><code>
+Blog registration completed.</code></pre>
+            <p>For the add blog, you need to make a POST call to the URL below:.User must login for this operation:
+                <br>
+                <code class="higlighted">{{ apiUrl }}blog</code>
+            </p>
+        </div>
+        <div class="overflow-hidden content-section">
+            <h2>Blog Update</h2>
+            <pre><code>
 #Request Example
 PUT {{ apiUrl }}blog
 {
     "BlogMenuID" : 1,
     "BlogContent" : "Lorem İpsumm2",
     "BlogDescription" : "Lorem ipsum dolor sit amet.",
-    "BlogTitle": "Lorem İpsum"
+    "BlogTitle": "Lorem İpsum",
+    "BlogState": false
 }
         
 Reusult Example:
 Blog information has been updated.</code></pre>
-                    <p>For the update blog, you need to make a PUT call to the URL below.User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog</code>
-                    </p>
-                </div>
+            <p>For the update blog, you need to make a PUT call to the URL below.User must login for this operation:
+                <br>
+                <code class="higlighted">{{ apiUrl }}blog</code>
+            </p>
+        </div>
 
 
 
-                <div class="overflow-hidden content-section">
-                    <h2>Blog Delete</h2>
-                    <pre><code>
+        <div class="overflow-hidden content-section">
+            <h2>Blog Delete</h2>
+            <pre><code>
 #Request Example
 DELETE {{ apiUrl }}blog
 {
@@ -86,80 +61,88 @@ DELETE {{ apiUrl }}blog
         
 Reusult Example:
 Deletion succeeded.</code></pre>
-             <p>For the delete blog, you need to make a DELETE call to the URL below.User must login for this operation: 
+            <p>For the delete blog, you need to make a DELETE call to the URL below.User must login for this operation:
                 <br>
-                        <code class="higlighted">{{ apiUrl }}blog</code>
-                    </p>
-                </div>
-                <div class="overflow-hidden content-section">
-                    <h2>Blog List</h2>
-                    <pre><code>
+                <code class="higlighted">{{ apiUrl }}blog</code>
+            </p>
+        </div>
+        <div class="overflow-hidden content-section">
+            <h2>Blog List</h2>
+            <pre><code>
 #Request Example
 GET {{ apiUrl }}blog
 
 Result Example:
 [
     {
-    "BlogID": 1,
-    "UserID": 1,
-    "BlogMenuID": 9,
-    "BlogTitle": "Lorem",
-    "BlogDescription": "Lorem ipsum dolor sit amet2.",
-    "BlogContent": "Lorem İpsum",
-    "BlogState": 1,
-    "UserNameSurname": "Lorem İpsum",
-    "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
+        "BlogID": 1,
+        "UserID": 1,
+        "BlogMenuID": 9,
+        "BlogTitle": "Lorem",
+        "BlogDescription": "Lorem ipsum dolor sit amet2.",
+        "BlogContent": "Lorem İpsum",
+        "BlogState": 1,
+        "UserNameSurname": "Lorem İpsum",
+        "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
     },
     {
-    "BlogID": 2,
-    "UserID": 2,
-    "BlogMenuID": 10,
-    "BlogTitle": "Lorem2",
-    "BlogDescription": "Lorem ipsum dolor sit amet2.",
-    "BlogContent": "Lorem İpsum2",
-    "BlogState": 2,
-    "UserNameSurname": "Lorem İpsum2",
-    "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
+        "BlogID": 2,
+        "UserID": 2,
+        "BlogMenuID": 10,
+        "BlogTitle": "Lorem2",
+        "BlogDescription": "Lorem ipsum dolor sit amet2.",
+        "BlogContent": "Lorem İpsum2",
+        "BlogState": 2,
+        "UserNameSurname": "Lorem İpsum2",
+        "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
     },
     ...
 ]       
 
 #Request Example
-GET {{ apiUrl }}blog
-{
-    "limit": 1,
-    "offset": 0
-}
+GET {{ apiUrl }}blog?limit=1&offset=0
 
 Result Example:
 [
     {
-    "BlogID": 1,
-    "UserID": 1,
-    "BlogMenuID": 9,
-    "BlogTitle": "Lorem",
-    "BlogDescription": "Lorem ipsum dolor sit amet2.",
-    "BlogContent": "Lorem İpsum",
-    "BlogState": 1,
-    "UserNameSurname": "Lorem İpsum",
-    "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
+        "BlogID": 1,
+        "UserID": 1,
+        "BlogMenuID": 9,
+        "BlogTitle": "Lorem",
+        "BlogDescription": "Lorem ipsum dolor sit amet2.",
+        "BlogContent": "Lorem İpsum",
+        "BlogState": 1,
+        "UserNameSurname": "Lorem İpsum",
+        "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
     }
 ]</code></pre>
-                    <p>For the list get blog, you need to make a GET call to the URL below.User must login for this operation:
-                        <br>
-                        <code class="higlighted" >{{ apiUrl }}blog</code>
-                    </p>
-                </div>
-<div>
-</div>
-                <div class="overflow-hidden content-section" >
-                    <h2>Blog Information</h2>
-                    <pre><code>
+            <p>For the list get blog, you need to make a GET call to the URL below.User must login for this operation:
+                <br>
+                <code class="higlighted">{{ apiUrl }}blog</code>
+            </p>
+            <p>&emsp;1-
+                <b>limit:</b>
+                The limit parameter specifies the desired amount of data.<br>
+                &emsp;2-
+                <b>offset:</b>
+                It indicates from which line the requested data should be taken from.<br>
+                &emsp;3-
+                <b>UserID:</b>
+                Lists the blogs belonging to the user via the user id number.<br>
+                &emsp;4-
+                <b>BlogState:</b>
+                It is used to list active or passive blogs. value:(true or false)</p>
+        </div>
+        <div>
+        </div>
+        <div class="overflow-hidden content-section">
+            <h2>Blog Information</h2>
+            <pre><code>
 #Request Example
 GET {{ apiUrl }}blog/1
 
 Result Example:
- {
+{
     "BlogID": 1,
     "UserID": 1,
     "BlogMenuID": 9,
@@ -170,10 +153,10 @@ Result Example:
     "UserNameSurname": "Lorem İpsum",
     "BlogCreatedDate": "2020-10-29T21:27:51.000Z"
 }</code></pre>
-                    <p>For the Blog Information, you need to make a GET call to the URL below. 
-                        User must login for this operation:
-                        <br>
-                        <code class="higlighted">{{ apiUrl }}blog/:BlogID</code></p>
-                </div>
-            </div>
+            <p>For the blog Information, you need to make a GET call to the URL below.
+                User must login for this operation:
+                <br>
+                <code class="higlighted">{{ apiUrl }}blog/:BlogID</code></p>
         </div>
+    </div>
+</div>
