--- a/views/pages/componentMenu.twig
+++ b/views/pages/componentMenu.twig
@@ -1,7 +1,7 @@
 <div class="content-page tabcontent" id="tabComponentMenu">
 	<div class="content-code"></div>
 	<div class="content">
-		<div class="overflow-hidden content-section">
+		<div class="content-section">
 			<h1>Component Menu Transactions</h1>
 			<p>The user performs the components add, update, delete, list and get information operations with the following examples.</p>
 		</div>
@@ -77,22 +77,26 @@ Result Example:
 ]
 
 #Request Example
-GET {{ apiUrl }}component-menu
-{
-    "limit": 1,
-    "offset": 0                        
-}
-                        
+GET {{ apiUrl }}component-menu?limit=1&offset=0
+
 Reusult Example:    
-{
-    "ComponentMenuID": 21,
-    "ComponentMenuName": "cl",
-    "ComponentMenuDescription": "cl project"                            
-}</code></pre>
+[
+    {
+        "ComponentMenuID": 21,
+        "ComponentMenuName": "cl",
+        "ComponentMenuDescription": "cl project"
+    }
+]</code></pre>
 			<p>For the component menu list get, you need to make a GET call to the URL below. User must login for this operation :
 				<br>
 				<code class="higlighted">{{ apiUrl }}component-menu</code>
 			</p>
+			<p>&emsp;1-
+				<b>limit:</b>
+				The limit parameter specifies the desired amount of data.<br>
+				&emsp;2-
+				<b>offset:</b>
+				It indicates from which line the requested data should be taken from.</p>
 		</div>
 
 		<div class="overflow-hidden content-section">
